# glemton

./: .gitignore  CLAUDE.md  LICENSE  MODEL_CARD.md  README.md  RESTORE.md  STATUS.md  WAKE_UP.md  pyproject.toml  requirements.txt
configs/: debug-10m.yaml  glemton-350m-modern.yaml  glemton-350m.yaml  midsize-50m.yaml  scaffold-validate-opus.yaml
data/tokenizer/: glemton-bpe-32k.json
docs/: architecture.md  data.md  evals.md  prior_art.md  training.md
docs/journal/: 2026-05-20-final.md  2026-05-20-late.md  2026-05-20.md
scripts/: chat.py  download_data.py  download_data_v2.py  download_modern_dialogue.py  download_reddit_archive.py  gen_status.py  pack_shards.py  prepare_corpus.py  prepare_gutenberg_books.py  prepare_modern_dialogue.py  pull_hf_dialogue.py  pull_more_gutenberg.py  run_debug_train.py  run_long_conversation_eval.py  run_sycophancy_eval.py  sample_ckpt.py  sample_compare.py  train_tokenizer.py  weekend_run.ps1
src/glemton/: __init__.py  data.py  eval_long_conversation.py  eval_sycophancy.py  generate.py  model.py  tokenizer.py  train.py
tests/probes/: sycophancy_probes.txt
