[project]
name = "glemton"
version = "0.0.1"
description = "From-scratch open-weights conversational language model trained on natural human dialogue"
authors = [{name = "ninjahawk"}]
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
    "torch",
    "transformers>=4.45",
    "tokenizers>=0.20",
    "datasets>=3.0",
    "sentencepiece",
    "bitsandbytes",
    "wandb",
    "pyyaml",
    "tqdm",
    "einops",
    "numpy",
    "requests",
    "beautifulsoup4",
    "lxml",
    "regex",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "black"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
